<resources>
    <string name="app_name">Assignment Two</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="km">KM</string>
    <string name="weight">Weight</string>
    <string name="kg">KG</string>
    <string name="distance">Distance</string>
    <string name="_00_00">00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="okbtn">okBtn</string>


</resources>
